<resources>
    <string name="app_name">SqueeG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_rpassword">Repeat password</string>
    <string name="spin_country_prompt">Country</string>
    <string name="spin_state_prompt">State</string>
    <string name="text_register">Register</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="font_regular">NotoSans_Regular</string>
    <string name="font_bold">NotoSans_Bold</string>
    <string name="err_msg_name">Enter Name</string>
    <string name="err_msg_phone">Only numbers Allowed</string>
    <string name="err_msg_phone_no">Enter Phone no</string>
    <string name="err_msg_zipcode">Enter zipcode</string>
    <string name="err_msg_city">Should contain only letters</string>
    <string name="err_msg_email">Enter the valid email address</string>
    <string name="err_msg_password">Enter password</string>
    <string name="err_msg_password_length">Password should contain minimum 8 characters</string>
    <string name="err_msg_uname">Enter username</string>
    <string name="err_msg_city_name">Enter city</string>
    <string name="err_msg_rpassword">Enter repeat password</string>
    <string name="err_msg_cpassword">Enter correct password</string>
    <string name="text_agree">By signing up, I agree SqueeG</string>
    <string name="text_agree_conditions"> Terms of conditions</string>
    <string name="err_msg_country">Please select the country</string>
    <string name="err_msg_state">Please select the state</string>
    <string name="text_login">Login</string>
    <string name="err_password">Your password should be 8 characters long, It should be a combination of uppercase,lower case, Number and special character</string>
    <string name="signup_info">Not a member yet? it’s fun and easy!</string>
    <string name="fpassword_info">Do you know your password? it’s fun and easy!</string>
    <string name="fpassword_login">Login now</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="search">Search</string>
    <string name="search_gigs">Search Services</string>
    <string name="signup_register_now">Register now</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="hint_username_email">Username / Email</string>
    <string name="text_already_login_info">Already a member?</string>
    <string name="text_already_login">Login</string>
    <string name="text_submit">Submit</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="err_internet_connection">Please enable your internet.</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_sell">Sell</string>
    <string name="bottom_menu_buy">Buy</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="bottom_menu_chat">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_sell">Sell Services</string>
    <string name="title_buy">Buy Services</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="title_change_password">Change Password</string>
    <string name="hint_cpassword">Current Password</string>
    <string name="hint_npassword">New Password</string>
    <string name="err_msg_npassword">Enter new password</string>
    <string name="err_msg_cupassword">Enter old password</string>
    <string name="title_paypal_settings">Paypal Settings</string>
    <string name="text_top_categories">Top Category</string>
    <string name="text_more">More</string>
    <string name="text_popular_gigs">Popular Services</string>
    <string name="text_recent_popular_gigs">Recent Services</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_zip_code">Zip code</string>
    <string name="hint_city">City</string>
    <string name="hint_address_line">Address Line</string>
    <string name="hint_suggestion_about_you">Suggestion about you</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_category">Categories</string>
    <string name="title_all_gigs">Services</string>
    <string name="text_order_now">Order Now</string>
    <string name="gigs_description">Description</string>
    <string name="user_info">User Information</string>
    <string name="total_views">Total Views</string>
    <string name="txt_country">Country</string>
    <string name="txt_gigs_user_count">User count</string>
    <string name="txt_speaks">Speaks</string>
    <string name="text_recommended_gigs">Recommended Service</string>
    <string name="hint_title_gigs">Title for your Service*</string>
    <string name="hint_deliver_gigs">When will you deliver the Service?*</string>
    <string name="hint_desc">Provide more details about your service*</string>
    <string name="hint_requirement">What do you need from the Buyer to get started</string>
    <string name="hint_gig_cost">Cost of the Services*</string>
    <string name="hint_extras">I can</string>
    <string name="hint_cost">$</string>
    <string name="hint_day">day</string>
    <string name="txt_add_more_items"><u>Add more items</u></string>
    <string name="txt_earn_money">Earn extra money - offer optional add-on services to the Buyer</string>
    <string name="txt_super_fast_delivery">Super fast Delivery</string>
    <string name="text_create_gigs">Create a service</string>
    <string name="err_extras_isempty">Enter extras name</string>
    <string name="err_extrascost_isempty">Enter extras cost</string>
    <string name="err_extrasday_isempty">Enter extras delivery day</string>
    <string name="err_gigs_title">Enter services title</string>
    <string name="err_gigs_delivery_day">Enter delivery day</string>
    <string name="err_gigs_costs">Enter services cost</string>
    <string name="err_gigs_valid_costs">Enter valid cost</string>
    <string name="err_gigs_desc">Enter services description</string>
    <string name="err_gigs_require">Enter services requirement</string>
    <string name="txt_extras">Extras</string>
    <string name="txt_terms_conditions">I accept terms and conditions for services portal</string>
    <string name="title_favourite">Favourites</string>
    <string name="title_last_visited_gigs">Last Visited Services</string>
    <string name="no_fav_item_found">No more favourites item found.</string>
    <string name="intro_screen_one_txt">Showcase your works</string>
    <string name="intro_screen_one_desc">It\'s your destination and find out more opportunities for your job</string>
    <string name="intro_screen_two_txt">get Rewarded</string>
    <string name="intro_screen_two_desc">Earn cash for your work and improve your business</string>
    <string name="title_edit_gigs">Edit Services</string>
    <string name="text_edit_gigs">Edit Services</string>
    <string name="title_activity">Activity</string>
    <string name="hint_reason">Reason</string>
    <string name="hint_paypal_email">Paypal Email ID</string>
    <string name="text_update">Update</string>
    <string name="hint_feedback">Enter your comments</string>
    <string name="text_similar_gigs">Similar Services</string>
    <string name="text_extras_gigs">Extras</string>
    <string name="text_review_gigs">Reviews</string>
    <string name="demo">Thankfully, Dreamguys technology can change your business. Our web designing,web devlopment,mobile apps technology bring your dream comes true.It is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration.</string>
    <string name="contact">Contact</string>
    <string name="editGigs">Edit Services</string>
    <string name="no_data_found">No data found</string>
    <string name="title_cart">Cart</string>
    <string name="text_buy_now">Buy now</string>
    <string name="com_stripe_publishable_key">pk_test_1cGC9JfAkF6GhaegLd2XI2xl</string>
    <string name="termsandconditions">T and C</string>
    <string name="my_gigs">My Services</string>
    <string name="title_stripe_payment">Stripe payment</string>
    <string name="viewAll">View All</string>
    <string name="err_max_days">Only 29 days allowed</string>
    <string name="admob_app_id">ca-app-pub-5364746634723522~2025394746</string>
    <string name="banner_ad_unit_id">ca-app-pub-5364746634723522/4750618673</string>
    <string name="empty_name">Name should not be empty</string>
    <string name="reason">Reason</string>
    <string name="acc_name">THE ACCOUNT HOLDERS NAME</string>
    <string name="acc_num">ACCOUNT NUMBER</string>
    <string name="IBAN">IBAN</string>
    <string name="bank_name">BANK NAME</string>
    <string name="bank_addr">BANK ADDRESS</string>
    <string name="sort_code">SORT CODE(UK)</string>
    <string name="routing_num">SWIFT CODE(US)</string>
    <string name="IFSC_code">IFSC CODE(INDIAN)</string>
    <string name="stripe_reason">Enter Reason</string>
    <string name="err_stripe_acc_holder_name">Enter account holder name</string>
    <string name="err_stripe_acc_num">Enter Account Number</string>
    <string name="err_stripe_bank_name">Enter Bank Name</string>
    <string name="err_stripe_bank_addr">Enter Bank Address</string>
    <string name="err_stripe_sort_code">Enter Sort Code</string>
    <string name="err_stripe_routing_num">Enter Routing Number</string>
    <string name="err_stripe_IFSC_code">Enter IFSC Code</string>
    <string name="cancel_order">Cancel Your Order</string>
    <string name="err_pwd_match">New Password and Conform Password does not match</string>
    <string name="err_msg_address">Enter Address</string>
    <string name="err_msg_Suggestion">Enter Suggestion</string>
    <string name="err_server_msg">Oops, problem occurred while connecting to server</string>
    <string name="err_network_error">Network Error</string>
    <string name="err_try_again">Cannot reach server at the moment. Please try again.</string>
    <string name="text_latest_gigs">Latest Services</string>
    <string name="sociallogin">Sign in with your social account</string>
    <string name="text_save">Save</string>
    <string name="enter_msg">Enter message</string>
    <string name="send">Send</string>
    <string name="contact_name">ContactName</string>
    <string name="superfast">Super Fast</string>
    <string name="no_reviews_available">No Reviews Available</string>
    <string name="select_category">Select Category</string>
    <string name="no_request_available">No Request Available</string>
    <string name="max_300_characters">Max 300 Characters</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="add_a_description">Add a description</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="when_would_you_like_your_service_delivered">When would you like your service delivered</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="whats_s_your_budget_optional">Whats\'s your budget? (Optional)</string>
    <string name="budget">Budget</string>
    <string name="min_5">Min. $5</string>
    <string name="submit_your_request">Submit Your Request</string>
    <string name="choose_request">Choose Request</string>
    <string name="no_offer_available">No Offer available</string>
    <string name="accept_offer">Accept Offer</string>
</resources>